<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rounde="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/login_bg_red"
        android:elevation="5dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/img_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/home_ico_dibiao"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_17sp" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <com.miuhouse.zxcommunity.widget.OverScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@android:color/white"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:id="@+id/relative_me_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="@dimen/margin_10dp"
                        android:paddingRight="15dp"
                        android:paddingTop="@dimen/margin_10dp">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/img_avatar"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_alignParentLeft="true"
                            android:scaleType="centerCrop"
                            rounde:riv_corner_radius_bottom_left="@dimen/margin_5dp"
                            rounde:riv_corner_radius_bottom_right="@dimen/margin_5dp"
                            rounde:riv_corner_radius_top_left="@dimen/margin_5dp"
                            rounde:riv_corner_radius_top_right="@dimen/margin_5dp" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_toRightOf="@+id/img_avatar"
                            android:text="小白"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_15" />

                        <com.miuhouse.zxcommunity.widget.RoundTextView
                            android:id="@+id/tv_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="4dp"
                            android:layout_toLeftOf="@+id/img_jiantou"
                            android:padding="@dimen/margin_5dp"
                            android:text="@string/information_verify"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_14sp"
                            app:rv_backgroundColor="@color/login_bg_red"
                            app:rv_cornerRadius="4dp" />

                        <ImageView
                            android:id="@+id/img_jiantou"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/me_ico_jiantou"

                            />

                    </RelativeLayout>


                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/relative_sell_house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/relativelayout_selector"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="@dimen/margin_10dp">

                        <ImageView
                            android:id="@+id/img_me_sell"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/me_ico_shoufanggl" />

                        <TextView
                            android:id="@+id/tv_sell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/img_me_sell"
                            android:text="@string/buy_house_manage"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_15" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/view_linear_two"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@+id/relative_sell_house"
                        android:layout_marginLeft="51dp"
                        android:background="@color/cut_line" />

                    <RelativeLayout
                        android:id="@+id/relative_let_house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view_linear_two"
                        android:background="@drawable/relativelayout_selector"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="@dimen/margin_10dp">

                        <ImageView
                            android:id="@+id/img_me_let"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/me_ico_zufanggl" />

                        <TextView
                            android:id="@+id/tv_let"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/img_me_let"
                            android:text="@string/renting_manage"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_15" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">


                <RelativeLayout
                    android:id="@+id/relative_me_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/relativelayout_selector"
                    android:paddingBottom="@dimen/margin_10dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="@dimen/margin_10dp"

                    >

                    <ImageView
                        android:id="@+id/img_me_coupon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/me_ico_youhuiquan" />

                    <TextView
                        android:id="@+id/tv_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12dp"
                        android:layout_toRightOf="@+id/img_me_coupon"
                        android:text="@string/my_coupon"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_15" />
                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/relative_me_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/relativelayout_selector"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="@dimen/margin_10dp"
                        >

                        <ImageView
                            android:id="@+id/img_me_share"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/me_ico_fenxiang" />

                        <TextView
                            android:id="@+id/tv_me_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/img_me_share"
                            android:text="@string/share_frient"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_15" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/view_linear_three"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@+id/relative_me_share"
                        android:layout_marginLeft="51dp"
                        android:background="@color/cut_line" />

                    <RelativeLayout
                        android:id="@+id/relative_me_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view_linear_three"
                        android:background="@drawable/relativelayout_selector"
                        android:clickable="true"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="@dimen/margin_10dp">

                        <ImageView
                            android:id="@+id/img_me_feedback"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/me_ico_fankui" />

                        <TextView
                            android:id="@+id/tv_me_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/img_me_feedback"
                            android:text="@string/feedback"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_15" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/view_linear_four"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@+id/relative_me_feedback"
                        android:layout_marginLeft="51dp"
                        android:background="@color/cut_line" />

                    <RelativeLayout
                        android:id="@+id/relative_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view_linear_four"
                        android:background="@drawable/relativelayout_selector"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="@dimen/margin_10dp"

                        >

                        <ImageView
                            android:id="@+id/img_me_setting"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/me_ico_shezhi" />

                        <TextView
                            android:id="@+id/tv_me_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/img_me_setting"
                            android:text="@string/setting"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_15" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="@dimen/margin_10dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">


                <RelativeLayout
                    android:id="@+id/relative_me_instrustion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/relativelayout_selector"
                    android:paddingBottom="@dimen/margin_10dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="@dimen/margin_10dp"

                    >

                    <ImageView
                        android:id="@+id/img_me_instrustion"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/me_ico_shuom" />

                    <TextView
                        android:id="@+id/tv_me_instrustion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12dp"
                        android:layout_toRightOf="@+id/img_me_instrustion"
                        android:text="@string/direction_for_use"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_15" />
                </RelativeLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

    </com.miuhouse.zxcommunity.widget.OverScrollView>
</LinearLayout>